src/z80asm/z80asm2/t/20-preproc/expected/cu_move_01.txt
% z88dk-z80asm -v -dump-after-directives t/20-preproc//input/cu_move_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Assembling t/20-preproc/input/cu_move_01.asm...
# file: t/20-preproc/input/cu_move_01.asm
Identifier	"DEFC"	1:11	keyword=DEFC 
Identifier	"X"	1:16	keyword=X 
EQ	"="	1:18	
Integer	"127"	1:20	int_value=127 
EndOfLine	"\n"	1:23	
Define constant: X = $7F
Identifier	"DEFC"	2:11	keyword=DEFC 
Identifier	"Y"	2:16	
EQ	"="	2:18	
Integer	"255"	2:20	int_value=255 
EndOfLine	"\n"	2:23	
Define constant: Y = $FF
t/20-preproc/input/cu_move_01.asm:3:8: error: Expected argument after CU_MOVE
    cu.move 
           ^
t/20-preproc/input/cu_move_01.asm:4:10: error: Expected comma after expression in CU_MOVE
    cu.move 0
             ^
t/20-preproc/input/cu_move_01.asm:5:10: error: Unterminated expression after ","
    cu.move 0,
             ^
t/20-preproc/input/cu_move_01.asm:6:12: error: Unexpected token: ","
    cu.move 0,0,
               ^
t/20-preproc/input/cu_move_01.asm:7:1: error: CU_MOVE is only supported on the z80n
    cu.move -1,0
    ^
t/20-preproc/input/cu_move_01.asm:8:1: error: CU_MOVE is only supported on the z80n
    cu.move 0,0
    ^
t/20-preproc/input/cu_move_01.asm:9:1: error: CU_MOVE is only supported on the z80n
    cu.move X,0
    ^
t/20-preproc/input/cu_move_01.asm:10:1: error: CU_MOVE is only supported on the z80n
    cu.move X+1,0
    ^
t/20-preproc/input/cu_move_01.asm:11:1: error: CU_MOVE is only supported on the z80n
    cu.move 0,-1
    ^
t/20-preproc/input/cu_move_01.asm:12:1: error: CU_MOVE is only supported on the z80n
    cu.move 0,0
    ^
t/20-preproc/input/cu_move_01.asm:13:1: error: CU_MOVE is only supported on the z80n
    cu.move 0,Y
    ^
t/20-preproc/input/cu_move_01.asm:14:1: error: CU_MOVE is only supported on the z80n
    cu.move 0,Y+1
    ^
